# LearningRegularizationParametersForTGV

./: .gitattributes  .gitignore  .readthedocs.yml  README.md  README_template.md  TODO.md  activate_venv.sh  pyproject.toml  requirements.txt  requirements_frozen.txt  requirements_list.txt  train_mri_example.ipynb
config/: config_loader.py  data_config.py  example_denoising_tgv_config.yaml  example_denoising_tv_config.yaml  example_mri_tgv_config.yaml  example_mri_tgv_config_1.yaml  example_mri_tgv_config_test.yaml  example_mri_tv_config.yaml  zero_filled_config.yaml
data/mri/: data_generator.py  data_loader.py  dataset.py  naming.py  test_random.ipynb
docs/: conf.py  index.rst
encoding_objects/: cart_2d_enc_obj.py
gradops/: finite_diff_torch.py  gradops_torch.py
networks/: mri_pdhg_net.py  unet.py  unet_2d.py
notebooks/mri/: Practical3_working.ipynb  convert_pretrained_cuda_to_cpu.ipynb  difference_histograms.ipynb  example.ipynb  familiarise_with_data.ipynb  generate_results.ipynb  generate_results_tgv_scalar_torch.ipynb  generate_test_data.ipynb  grad_ops.py  grid_search_tv.ipynb  make_plots.ipynb  print_statistics.ipynb  prox_ops.py  show_training_progress.ipynb  simple_unet.txt  split_data.ipynb  test.ipynb  test_example.ipynb  test_load_model.ipynb  test_model_loading.ipynb  train_example.ipynb  unet.txt  unet_2d.txt  visualize.ipynb
pdhg/: mri_pdhg.py  pdhg.py  scalar_searcher.py
scripts/: epoch.py  logger.py  unet_loader.py
utils/: makepath.py  mask_funcs.py  metrics.py  noise_functions.py  results.py  search.py  visualize.py
(+125 files in other folders)
