[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reglearn"
version = "0.0.0"
description = "Learn regularisation parameter maps for MRI image reconstruction using U-Net."
authors = [
    { name = "trung-vt", email = "trung.vuthanh24@gmail.com" }
]
# Runtime dependencies
dependencies = [
    "torch",
]

[tool.setuptools.packages.find]
include = [
    "config",
    "data",
    "encoding_objects",
    "gradops",
    "networks",
    "pdhg",
    "scripts",
    "utils"
]

[tool.setuptools.package-data]
"reg_learn" = ["data/*"]
